[package]
name = "mangle-photos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.5"
webp = "0.2.2"

tokio = { version = "1.23.0", features = ["rt", "signal", "macros", "rt-multi-thread"] }
rayon = "1.7.0"

zip = "0.6.4"

axum = { version = "0.6.1", features = ["macros"] }
tower-http = { version = "0.3.5", features = ["compression-gzip", "compression-br"] }

fern = { version = "0.6.1", features = ["colored"]}
log = "0.4.17"

parking_lot = "0.12.1"

[profile.release]
lto = true